add more translations input

--- a/public/assets/i18n/ar.json
+++ b/public/assets/i18n/ar.json
@@ -26,7 +26,8 @@
   "Pay":"ادفع",
   "Hold":"انتظار",
   "Cancal":"إلغاء",
-  
+  "SAR":"ر.س",
+
   "Home":"الرئيسية",
    "Products":"المنتجات",
   "Orders":"الطلبات",
@@ -39,5 +40,17 @@
   "Return Order":"استرجاع الطلب",
   "End Day":"انهاء اليوم",
   "Hold Orders":"الطلبات المؤجلة",
-  "Welcome Back":"مرحبًا بعودتك"
+  "Welcome Back":"مرحبًا بعودتك",
+
+  "All":"الكل",
+  "unknown":"غير معروف",
+  "paid":"مدفوع",
+  "hold":"مؤجل",
+  "since":"منذ",
+   "months":"شهور",
+  "days":"أيام",
+  "hours":"ساعات",
+  "minutes":"دقائق",
+  "seconds":"ثواني"
+
 }
