add new translations field

--- a/public/assets/i18n/ar.json
+++ b/public/assets/i18n/ar.json
@@ -41,6 +41,7 @@
   "End Day":"انهاء اليوم",
   "Hold Orders":"الطلبات المؤجلة",
   "Welcome Back":"مرحبًا بعودتك",
+  "Done":"تم الانتهاء",
 
   "All":"الكل",
   "unknown":"غير معروف",
@@ -86,6 +87,12 @@
     "ERROR": "خطأ",
     "INFO": "معلومات",
     "WARNING": "تحذير"
-  }
+  },
 
+
+"Id":"م",
+"Time":"الوقت",
+"Code":"الكود",
+ "controls":"التحكم",
+ "There isn't any hold products":"لا يوجد اي طلبات مؤجلة"
 }
