add some translations

--- a/public/assets/i18n/ar.json
+++ b/public/assets/i18n/ar.json
@@ -116,5 +116,59 @@
   "Customer Phone":"رقم العميل",
     "Customer name is required":"اسم العميل مطلوب",
   "Customer Arabic name is required":"اسم العميل باللغة الإنجليزية مطلوب",
-  "Phone number is required":"رقم الهاتف مطلوب"
+  "Phone number is required":"رقم الهاتف مطلوب",
+
+
+  "Add New Products":"إضافة منتجات جديدة",
+  "Start by stocking your store with products your customers will love":"ابدأ بتخزين متجرك بالمنتجات التي سيحبها عملاؤك",
+   "product has been deleted successfully":"لقد تم حذف المنتج بنجاح",
+  "Product can not be deleted":"لم يتم حذف المنتج",
+   "Product Title Field Is Required":"اسم المنتج مطلوب",
+  "Product Price Field Is Required":"سعر المنتح مطلوب",
+  "Duplicate name found. Update aborted.":"تم العثور على اسم مكرر. تم إلغاء التحديث.",
+  "Enter Category Name":"أدخل اسم الفئة",
+   "Add New Category":"إضافة فئة جديدة",
+  "Add Categrory":"إضافة فئة",
+  "Add new":"أضف جديد",
+  "Choose Category":"اختر الفئة",
+  "No Categories":"لا توجد فئات",
+  "Category already exists":"الفئة موجودة بالفعل",
+  "Enter Category Arabic Name":"أدخل اسم الفئة باللغة الإنجليزية ",
+  "Category has been added successfully":"تمت إضافة الفئة بنجاح",
+  "Category can't be added":"لا يمكن إضافة الفئة",
+  "Save":"حفظ",
+  "Details":"التفاصيل",
+  "More":"المزيد",
+  "Alert":"تحذير",
+  "Accept":"موافق",
+  "Add Product Details then save it to be able to control advanced options.":"أضف تفاصيل المنتج ثم احفظها لتتمكن من التحكم في الخيارات المتقدمة",
+
+    "Product Details":"بيانات المنتج",
+    "Save Product Details":"حفظ تفاصيل المنتج",
+    "Require Shipping/Delivery?":"هل تحتاج إلى شحن/توصيل؟",
+     "KG":"كجم",
+    "No.Doesn't Require Delivery":"لا. لا يتطلب توصيل",
+    "Yes,Reequire Shipping.":"نعم، يتطلب شحن.",
+    "gram":"جرام",
+    "Product Weight":"وزن المنتج",
+    "Cost Price":"سعر التكلفة",
+    "Sale Price":"سعرالتخفيض",
+    "Sale Price end date":"تاريخ إنتهاء سعرالتخفيض",
+    "Valid till":"صالح حتي",
+    "Product Barcode":"باركود المنتج",
+    "Product Variants":"متغيرات المنتج",
+    "Add Options":"إضافة خيارات",
+    "Add Another Value":"إضافة قيمة أخرى",
+     "Delete Varaiant":"حذف المتغير",
+    "Add Variant":"إضافة متغير",
+    "Weight":"الوزن",
+    "Barcode":"باركود",
+     "Notify Quantity":"كمية الإخطار",
+      "Notify":"إخطار",
+      "Quantity":"الكمية",
+      "Product Quantity":"كمية المنتج",
+      "Add Image or Video":"إضافة صورة أو فيديو",
+      "Enter Product Name":"أدخل اسم المنتج",
+      "Unlimited Quantity":"كمية غير محدودة",
+      "Variants":"متغيرات"
 }
