--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -116,6 +116,59 @@
   "Customer Phone":"Customer Phone",
   "Customer name is required":"Customer name is required",
   "Customer Arabic name is required":"Customer Arabic name is required",
-  "Phone number is required":"Phone number is required"
+  "Phone number is required":"Phone number is required",
+
+  "Add New Products":"Add New Products",
+  "Start by stocking your store with products your customers will love":"Start by stocking your store with products your customers will love",
+  "product has been deleted successfully":"product has been deleted successfully",
+  "Product can not be deleted":"Product can not be deleted",
+  "Product Title Field Is Required":"Product Title Field Is Required",
+  "Product Price Field Is Required":"Product Price Field Is Required",
+  "Duplicate name found. Update aborted.":"Duplicate name found. Update aborted.",
+  "Enter Category Name":"Enter Category Name",
+  "Add New Category":"Add New Category",
+  "Add Categrory":"Add Categrory",
+  "Add new":"Add new",
+  "Choose Category":"Choose Category",
+  "No Categories":"No Categories",
+  "Category already exists":"Category already exists",
+  "Enter Category Arabic Name":"Enter Category Arabic Name",
+  "Category has been added successfully":"Category has been added successfully",
+  "Category can't be added":"Category can't be added",
+  "Save":"Save",
+  "Details":"Details",
+  "More":"More",
+  "Alert":"Alert",
+  "Accept":"Accept",
+  "Add Product Details then save it to be able to control advanced options.":"Add Product Details then save it to be able to control advanced options.",
+
+  "Product Details":"Product Details",
+  "Save Product Details":"Save Product Details",
+  "Require Shipping/Delivery?":"Require Shipping/Delivery?",
+  "KG":"KG",
+  "No.Doesn't Require Delivery":"No.Doesn't Require Delivery",
+  "Yes,Reequire Shipping.":"Yes,Require Shipping.",
+  "gram":"gram",
+  "Product Weight":"Product Weight",
+  "Cost Price":"Cost Price",
+  "Sale Price":"Sale Price",
+  "Sale Price end date":"Sale Price end date",
+  "Valid till":"Valid till",
+  "Product Barcode":"Product Barcode",
+  "Product Variants":"Product Variants",
+  "Add Options":"Add Options",
+  "Add Another Value":"Add Another Value",
+  "Delete Varaiant":"Delete Varaiant",
+  "Add Variant":"Add Variant",
+  "Weight":"Weight",
+  "Barcode":"Barcode",
+  "Notify Quantity":"Notify Quantity",
+  "Notify":"Notify",
+  "Quantity":"Quantity",
+  "Product Quantity":"Product Quantity",
+  "Add Image or Video":"Add Image or Video",
+  "Enter Product Name":"Enter Product Name",
+  "Unlimited Quantity":"Unlimited Quantity",
+  "Variants":"Variants"
 
 }
