--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -186,6 +186,10 @@
   "Name is already Exist":"Name is already Exist",
   "Product has been added successfully":"Product has been added successfully",
   "Another Product already exists with this":"Another Product already exists with this",
-  "Add New Product":"Add New Product"
+  "Add New Product":"Add New Product",
+  "Failed to create product":"Failed to create product",
+  "Failed to update product":"Failed to update product",
+  "Failed to delete product":"Failed to delete product",
+  "Failed to delete products":"Failed to delete products"
 
 }
