--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -190,6 +190,7 @@
   "Failed to create product":"Failed to create product",
   "Failed to update product":"Failed to update product",
   "Failed to delete product":"Failed to delete product",
-  "Failed to delete products":"Failed to delete products"
+  "Failed to delete products":"Failed to delete products",
+  "This is a return order":"This is a return order"
 
 }
