--- a/public/assets/i18n/ar.json
+++ b/public/assets/i18n/ar.json
@@ -212,5 +212,8 @@
          "Failed to fetch orders":"فشل في إيجاد الطلبات",
          "Efficiency in every order. Excellence in every delivery.":"كفاءة في كل طلب. تميز في كل تسليم",
           "Add New Order":"إضافة طلب جديد",
-          "There is no products to be returned":"لا يوجد منتجات للإرجاع"
+          "There is no products to be returned":"لا يوجد منتجات للإرجاع",
+          "Add New Variant":"إضافة متغير جديد",
+          "Failed to fetch variants":"فشل في إيجاد المتغيرات",
+          "Failed to fetch products":"فشل في إيجاد المنتجات"
 }
