--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -212,6 +212,10 @@
  "Failed to fetch orders":"Failed to fetch orders",
  "Efficiency in every order. Excellence in every delivery.":"Efficiency in every order. Excellence in every delivery.",
  "Add New Order": "Add New Order",
- "There is no products to be returned":"There is no products to be returned"
+ "There is no products to be returned":"There is no products to be returned",
+ "Add New Variant":"Add New Variant",
+  "Failed to fetch variants":"Failed to fetch variants",
+  "Failed to fetch products": "Failed to fetch products"
+
 
 }
