--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -252,5 +252,7 @@
   "Inactive":"Inactive",
   "Customer Type":"Customer Type",
   "Categories":"Categories",
-  "New Order": "New Order"
+  "New Order": "New Order",
+  "Every category, clearly crafted — so finding the right product feels effortless.":"Every category, clearly crafted — so finding the right product feels effortless.",
+  "Active Status":"Active Status"
 }
